--- a/utkast till utkast till rapport.tex
+++ b/utkast till utkast till rapport.tex
@@ -1,3 +1,5 @@
+\documentclass{article}
+\begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%  DEL 1: FÖRUTSÄTTNINGAR
 %%%%%%%%%%%%%Område/bakgrund: vilket är området, omgivningen, kontextet, bakgrunden för projektet?
 
@@ -79,3 +81,4 @@ Finally we should design a way for the database of symbols and chart layouts to 
 %%%%%%%%%%%%%vilka etiska frågeställningar finns (tänk t.ex. på användningen av resultatet)?
 
 Our ethical obligations with this project is providing a functional and stable product. If our system does not preform to specification, a lot of patients could get erroneous measurements during testing, costing a lot of time and money to correct. We will also have to work with code obfuscation to prevent illegal distribution of our software, since it is intended to be sold to hospitals and clinics worldwide.
+\end{document}
