Fixed spelling error

--- a/utkast till utkast till rapport.tex
+++ b/utkast till utkast till rapport.tex
@@ -41,7 +41,7 @@ Our employer is Per Söderberg, professor and chair of opthalmology with the Dep
 
 %%%%%%%%%%%%%%%%%%%%%%%%Syfte: vart strävar projektet? vad är det övergripande målet, nyttan, effekterna av projektet?
 %%%%%%%%%%%%%t.ex. bättre koll på kosthållning, enklare planering av studier
-\section{Purpouse}
+\section{Purpose}
 To solve the problems with this system the Department of Neuroscience have performed tests using a digital screen to present the charts instead of using printed medium. This means the optician can have many more variations on the charts at disposal. The set of symbols used on the charts can be switched with a menu, and the screen provides an adequately lit surface by itself. The current system is implemented by connecting an android tablet to a screen via an HDMI cable, and the charts are rendered via a web browser on the tablet. Testing has proceeded for over a year, and has yielded very good results.
 
 The goal of this project is to take the system used for these tests and develop a complete implementation with several advantages over the testing system, such as:
