Lagt till lite under bakgrund

--- a/utkast till utkast till rapport.tex
+++ b/utkast till utkast till rapport.tex
@@ -20,6 +20,7 @@ AxAnIvIs is a project involving development of a method for displaying optician'
 %Inom området oftalmiatrik används idag tavlor med förtryckta rader symboler för att undersöka patienters synfunktion. Denna betäms genom att patienten läser tecken tills den inte längre korrekt kan bestämma vilket tecken det är, och optikern kan därmed läsa ut patientens synskärpa.
 
 \section{Background}
+\subsection{Ophthalmology}
 In the field of ophthalmology today, charts with printed lines of continuously smaller symbols are used to measure a patients visual acuity. The measurement is made by having the patient read symbols on the chart from a set distance. The person reads down the chart until it is no longer possible to make out the characters. Based on the size of the character the patient failed to tell, a visual acuity can be determined. 
 
 %För att tavlan ska fungera som grund för dessa standardiserade tester i ögonskärpa måste miljön för testet vara noga beredd. Det finns bland annat krav på att tavlan är sex meter ifrån patienten, och att ljusstyrkan i rummet är exakt. Dessa krav kan inte alltid uppfyllas, vilket leder till avvikelser i testerna.
@@ -29,6 +30,13 @@ For such charts to function as a basis for these standardized tests of visual ac
 %Det finns även många varianter på dessa tavlor. Flera olika uppsättningar optyper (tecken som visas på tavlorna, oftast bokstäver) har utvecklats för olika typer av patienter, bland annat varianter för patienter som inte kan alfabetet, eller barn. Även layouten av optyper på tavlan har flera varianter, från den klassiska Snellentavlan som utvecklades på 1800-talet, till den modernare LogMAR tavlan.
 
 There are also several different variations on these charts. Different sets of symbols, ranging from different subsets of latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen Chart that was developed in the 19th century, to the more modern LogMAR chart.
+
+\subsection{Related work}
+%(http://digitaleyechart.com/)
+Several pieces of software exists that tries to solve the problems of the physical charts. Digital Eye Chart is one such program, that attempts to solve the problem of having several charts by using a monitor instead. The user can then, with the help of a computer, change the symbols on the chart and even generate a random chart. 
+%http://ichartplus.com/
+iChartPlus is another programs which is similar to Digital Eye Chart but also have an adjustable viewing distance.
+
 
 \section{Employer}
 %%%%%%%%%%%%%beskriv uppdragsgivare, om ni har
